Change participantScope property to enum in thread, meeting and meeting_recurring

--- a/src/i18n/locales/en.json
+++ b/src/i18n/locales/en.json
@@ -482,7 +482,7 @@
   "ParticipantsScopeSelect": {
     "Organization": "All members of the Organization",
     "CircleLeaders": "Members of the Role",
-    "CircleMembers": "All members of the Role and sub-Roles",
+    "CircleMembers": "Members of the Role and sub-Roles",
     "None": "Only some invited members"
   },
   "ResetPasswordPage": {
