--- a/src/i18n/locales/en.json
+++ b/src/i18n/locales/en.json
@@ -369,7 +369,8 @@
         "revoke": "Revoke invitation",
         "readonly": "Read only",
         "member": "Member",
-        "admin": "Admin"
+        "admin": "Admin",
+        "owner": "Owner"
       },
       "awaiting": "Invitation sent to {{email}} on {{date}}, awaiting acceptance.",
       "resend": "Resend",
@@ -425,6 +426,7 @@
       "readonly": "Read only",
       "member": "Member",
       "admin": "Admin",
+      "owner": "Owner",
       "invited": "Invited",
       "notInvited": "Not invited"
     }
