--- a/src/i18n/locales/en.json
+++ b/src/i18n/locales/en.json
@@ -388,6 +388,7 @@
     "workingTime": "Working time"
   },
   "MemberRoles": {
+    "heading": "Roles",
     "emptyRoles": "None",
     "addRole": "Add a role",
     "totalAllocatedTime": "Total allocated time:",
