--- a/src/i18n/locales/fr.json
+++ b/src/i18n/locales/fr.json
@@ -565,7 +565,8 @@
     "baseRoles": "Rôles de base",
     "vacantRoles": "Rôles vacants",
     "logs": "Historique",
-    "superAdmin": "Admin"
+    "superAdmin": "Admin",
+    "subscription": "Abonnement"
   },
   "Sidebar": {
     "orgs": "Organisations",
@@ -591,6 +592,9 @@
   "SubCirclesFormControl": {
     "roles": "Rôles :",
     "addRole": "Ajouter un rôle"
+  },
+  "SubscriptionPage": {
+    "heading": "Abonnement"
   },
   "SuperAdminPage": {
     "heading": "Administration",
