Improve roles assignation in onboarding

--- a/src/i18n/locales/en.json
+++ b/src/i18n/locales/en.json
@@ -733,6 +733,7 @@
     "create": "Create",
     "send": "Send",
     "open": "Open",
+    "skip": "Skip",
     "createThread": "Create a Thread",
     "createMeeting": "Create a Meeting",
     "createTask": "Create a Task",
