--- a/src/i18n/locales/fr.json
+++ b/src/i18n/locales/fr.json
@@ -728,6 +728,7 @@
     "create": "Créer",
     "send": "Envoyer",
     "open": "Ouvrir",
+    "skip": "Passer",
     "createThread": "Créer une Discussion",
     "createMeeting": "Créer une Réunion",
     "createTask": "Créer une Tâche",
