--- a/src/i18n/locales/fr.json
+++ b/src/i18n/locales/fr.json
@@ -607,7 +607,15 @@
       "amount": "Montant",
       "invoiceDate": "Date de la facture",
       "invoice": "Facture",
-      "download": "Télécharger"
+      "download": "Télécharger",
+      "status": "Statut",
+      "paymentStatus": {
+        "paid": "Payé",
+        "draft": "Brouillon",
+        "open": "Ouverte",
+        "uncollectible": "Irrécupérable",
+        "void": "Annulé"
+      }
     },
     "accountTab": {
       "billingEmail": "Email de facturation",
@@ -617,10 +625,13 @@
       "updateBillingEmail": "Mise à jour de l'email de facturation",
       "billingEmailUpdated": "Adresse email de facturation mise à jour",
       "billingEmailUpdateError": "Erreur lors de la mise à jour de l'adresse email de facturation",
-      "updateBillingDetails": "Mise à jour des informations facturation",
+      "updateBillingDetails": "Mise à jour des informations de facturation",
       "billingDetailsUpdated": "Informations de facturation mis à jour",
       "billingDetailsUpdateError": "Erreur lors de la mise à jour des informations de facturation",
-      "errorOccurred": "Une erreur s'est produite, veuillez réessayer plus tard"
+      "updatepaymentMethod": "Mise à jour du moyen de paiement",
+      "paymentMethodUpdated": "Moyen de paiement mis à jour",
+      "paymentMethodUpdateError": "Erreur lors de la mise à jour du moyen de paiement",
+      "errorLoadingInvoices": "Une erreur s'est produite lors de la recupération des factures"
     }
   },
   "SubscriptionPlans": {
@@ -639,6 +650,10 @@
     "subscriptionActiveUntil": "Abonnement actif jusqu'au",
     "activateOnSubscriptionEnd": "S'activera quand l'abonnement actuel se termine",
     "upcomingInvoiceHelp": "Savoir comment est calculé ce montant chaque mois",
+    "active": "Actif",
+    "unsubscribeDate": "Votre abonnement prendra fin le {{date}}",
+    "subscriptionResumed": "Votre abonnement à été ré-activer",
+    "noBillingAccount": "Vous n'avez pas de compte de facturation pour l'instant",
     "free": {
       "title": "Gratuit",
       "desc": "Parfait pour tester et pour collaborer en petite équipe.",
@@ -827,6 +842,7 @@
     "copy": "Copier",
     "toastCopied": "URL copiée",
     "none": "Aucun",
+    "errorOccurred": "Une erreur s'est produite, veuillez réessayer plus tard. Si le problème persiste, contactez-nous à godefroy@lonestone.studio",
     "searchTypes": {
       "All": "Tous",
       "Member": "Membres",
