Handling payment status

--- a/src/i18n/locales/en.json
+++ b/src/i18n/locales/en.json
@@ -603,6 +603,7 @@
     "subscriptionTabTitle": "My subscription",
     "accountTabTitle": "Account",
     "invoicesTabTitle": "Invoices",
+    "subscription": "Subscription",
     "invoiceTab": {
       "heading": "Invoice history",
       "desc": "Find all your past invoices here and download them.",
@@ -619,6 +620,21 @@
         "uncollectible": "Uncollectible",
         "void": "Canceled"
       }
+    },
+    "paymentModal": {
+      "subscribeToPlan": "{{plan}} plan",
+      "details": "Billing details",
+      "payment": "Payment",
+      "summary": "Summary",
+      "next": "Next",
+      "confirm": "Confirm",
+      "prev": "Back",
+      "subscription": "Subscription:",
+      "pricePerSeat": "Price per seat:",
+      "nbSeat_one": "Number of seat: {{count}}",
+      "nbSeat_other": "Number of seats: {{count}}",
+      "total": "Total",
+      "month": "month"
     },
     "accountTab": {
       "billingEmail": "Billing email",
@@ -645,18 +661,22 @@
     "downgradePlan": "Go back to this plan",
     "contactUs": "Get in touch with us",
     "included": "Included",
-    "upcomingInvoiceAmount": "Upcoming invoice amount",
-    "upcomingInvoice": "Upcoming invoice",
+    "upcomingInvoiceAmount": "Upcoming invoice",
+    "drawdownOn": "Drawdown on",
     "paymentMethod": "Payment method",
     "expiresAt": "Expires",
     "card": "Card",
-    "subscriptionActiveUntil": "Subscription active until",
+    "subscriptionExpires": "Your subscription will end on",
     "activateOnSubscriptionEnd": "Will activate when current subscription ends",
+    "reactivateSubscription": "Reactivate my subscription",
     "upcomingInvoiceHelp": "Know how this amount is calculated each month",
     "active": "Active",
     "unsubscribeDate": "Your subscription will end on {{date}}",
     "subscriptionResumed": "Your subscription has been resumed",
     "noBillingAccount": "You do not have any billing account yet",
+    "subscriptionSuccess": "That's a wrap!",
+    "subscriptionCreated": "Your subscription has been successfully created 😀",
+    "invoiceAvailable": "Your €{{amount}} invoice can be downloaded from the Invoices tab",
     "free": {
       "title": "Free",
       "desc": "Perfect to try or work with a small team",
@@ -826,6 +846,7 @@
     "createMeeting": "Create a Meeting",
     "createTask": "Create a Task",
     "createDecision": "Create a Decision",
+    "close": "Close",
     "edit": "Edit",
     "move": "Move",
     "duplicate": "Duplicate",
@@ -848,7 +869,8 @@
     "copy": "Copy",
     "toastCopied": "URL copied",
     "none": "None",
-    "errorOccurred": "An error occurred, plase try again later. If this persists contact us at godefroy@lonestone.studio",
+    "errorOccured": "An error occurred.",
+    "errorRetry": "An error occurred, plase try again later. If this persists contact us at godefroy@lonestone.studio",
     "searchTypes": {
       "All": "All",
       "Member": "Members",
