--- a/src/components/molecules/editor/lib/README
+++ b/src/components/molecules/editor/lib/README
@@ -3,12 +3,16 @@ Forked from https://github.com/facebook/lexical/tree/main/packages/lexical-playg
 We're trying to keep up with official playground changes to apply them on this editor when it's useful.
 
 To do that, it is recommanded to clone the repo, pull the last commits
-and display a diff between last synchronized commit with HEAD.
+and display a diff between last synchronized commit with HEAD:
 
-Last synchronized commit:
+```
+git diff fad90c6132c6c1fcbb55d31fa5bd3b54868086f8 HEAD -- packages/lexical-playground/ ':!packages/lexical-playground/__tests__/'
+```
 
-commit 6db97e78f869afeb475d9eeb1e21dabeb83d3b83 (HEAD -> main, origin/main, origin/HEAD)
-Author: Maksim Horbachevsky <fantactuka@gmail.com>
-Date: Tue Dec 20 08:44:28 2022 -0500
+Last applied commit:
 
-    Preserve empty parent during replacement (#3595)
+commit fad90c6132c6c1fcbb55d31fa5bd3b54868086f8 (HEAD -> main, origin/main, origin/HEAD)
+Author: Dominic Gannaway <trueadm@users.noreply.github.com>
+Date: Fri Feb 10 14:12:25 2023 +0000
+
+    Add KEY_DOWN_COMMAND (#3878)
