Add new simple view to graph

--- a/src/i18n/locales/en.json
+++ b/src/i18n/locales/en.json
@@ -94,6 +94,12 @@
     "representCircle": "Represent role <link />",
     "representInCircle": "in role <link />"
   },
+  "CirclesPage": {
+    "views": {
+      "All": "All",
+      "Simple": "Simple"
+    }
+  },
   "CircleTasks": {
     "create": "Create a task"
   },
