:art: update MeetingStarted email notification template, add translation using variables, refacto and improve notification code

--- a/src/i18n/locales/fr.json
+++ b/src/i18n/locales/fr.json
@@ -787,6 +787,16 @@
     }
   },
   "notifications": {
+    "common": {
+      "action": {
+        "openMeeting": "Ouvrir la réunion"
+      },
+      "email": {
+        "notificationReceived": "Vous avez reçu une notification :",
+        "automaticEmail": "Ceci est un email automatique, merci de ne pas y répondre.",
+        "unsubscribe": "Vous pouvez régler vos paramètres de notification sur"
+      }
+    },
     "ThreadMessage": {
       "title": "",
       "content": ""
