--- a/src/i18n/locales/en.json
+++ b/src/i18n/locales/en.json
@@ -792,6 +792,16 @@
     }
   },
   "notifications": {
+    "common": {
+      "action": {
+        "openMeeting": "Open meeting"
+      },
+      "email": {
+        "notificationReceived": "You have received a notification :",
+        "automaticEmail": "This is an automatic email, please do not reply to it.",
+        "unsubscribe": "You can adjust your notification settings on"
+      }
+    },
     "ThreadMessage": {
       "title": "",
       "content": ""
