--- a/src/i18n/locales/en.json
+++ b/src/i18n/locales/en.json
@@ -611,6 +611,14 @@
     "accountTabTitle": "Account",
     "invoicesTabTitle": "Invoices",
     "subscription": "Subscription",
+    "mustBeOwner": "You must be an owner of this org to manage the subscription",
+    "cancelSubscriptionModal": {
+      "title": "Cancel my subscription",
+      "subtitle": "Are you sure you want to cancel your subscription?",
+      "desc1": "This action will take effect at the end of the subscription period",
+      "desc2": "Active members of the organisation will revert to normal members",
+      "desc3": "You will lose the advantage of priority support from our team"
+    },
     "invoiceTab": {
       "heading": "Invoice history",
       "desc": "Find all your past invoices here and download them.",
@@ -638,14 +646,18 @@
       "prev": "Back",
       "subscription": "Subscription:",
       "pricePerSeat": "Price per seat:",
-      "nbSeat_one": "Number of seat: {{count}}",
-      "nbSeat_other": "Number of seats: {{count}}",
+      "nbSeat_one": "Number of seat:",
+      "nbSeat_other": "Number of seats:",
       "total": "Total",
-      "month": "month"
+      "month": "month",
+      "promotionPlaceholder": "Promotion code",
+      "dueNow": "Due now",
+      "invalidPromotionCode": "Invalid promotion code"
     },
     "accountTab": {
       "billingEmail": "Billing email",
       "billingDetails": "Billing details",
+      "invalidBillingDetails": "Invalid billing details",
       "currentSubscription": "Current subscription",
       "paymentMethod": "Payment method",
       "updateBillingEmail": "Update billing email",
@@ -672,6 +684,7 @@
     "activeMember_other": "{{count}}/{{total}} active members",
     "upgradePlan": "Upgrade to this plan",
     "downgradePlan": "Go back to this plan",
+    "selectPlan": "Select this plan",
     "contactUs": "Get in touch with us",
     "included": "Included",
     "upcomingInvoiceAmount": "Upcoming invoice",
@@ -856,6 +869,7 @@
     "send": "Send",
     "open": "Open",
     "skip": "Skip",
+    "confirm": "Confirm",
     "createThread": "Create a Thread",
     "createMeeting": "Create a Meeting",
     "createTask": "Create a Task",
@@ -863,6 +877,7 @@
     "close": "Close",
     "edit": "Edit",
     "move": "Move",
+    "apply": "Apply",
     "duplicate": "Duplicate",
     "archive": "Archive",
     "unarchive": "Restore",
