--- a/src/i18n/locales/fr.json
+++ b/src/i18n/locales/fr.json
@@ -871,6 +871,7 @@
     "remove": "Retirer",
     "clear": "Effacer",
     "apply": "Appliquer",
+    "confirm": "Confirmer",
     "show": "Afficher",
     "hide": "Masquer",
     "seeMore": "Voir plus",
